--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -19,10 +19,10 @@ vscode:
     - bradlc.vscode-tailwindcss
 tasks:
   - name: regen-ledger
-    before: git clone https://github.com/onezoomin/regen-ledger
+    before: cd regen-ledger || git clone https://github.com/onezoomin/regen-ledger
     init: cd regen-ledger && git pull && git checkout divvy && make -k install && scripts/start_testnode.sh
     command: cd regen-ledger && build/regen/start
   - name: allocation-ui
-    before: git clone https://github.com/onezoomin/allocation-ui && curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm
+    before: curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm && cd allocation-ui || git clone https://github.com/onezoomin/allocation-ui 
     init: cd allocation-ui && git pull && pnpm i
     command: cd allocation-ui && pnpm dev
