--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,12 +17,13 @@ vscode:
     - dsznajder.es7-react-js-snippets
     - golang.go
     - bradlc.vscode-tailwindcss
+    - dbaeumer.vscode-eslint
 tasks:
-  - name: regen-ledger
+  - name: regen-ledgerr
     before: cd regen-ledger || git clone https://github.com/onezoomin/regen-ledger
     init: cd /workspace/regen-local/regen-ledger && git pull && git checkout divvy && make -k install && scripts/start_testnode.sh | tee start_testnode.log 
     command: cd /workspace/regen-local/regen-ledger && regen start
-  - name: allocation-ui
+  - name: allocation-uii
     before: curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm && cd allocation-ui || git clone https://github.com/onezoomin/allocation-ui 
     init: cd /workspace/regen-local/allocation-ui && git pull && pnpm i
     command: cd /workspace/regen-local/allocation-ui && pnpm dev --force
