--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -19,12 +19,16 @@ vscode:
     - bradlc.vscode-tailwindcss
     - dbaeumer.vscode-eslint
 tasks:
-  - name: regen-ledgerr
-    before: cd regen-ledger || git clone https://github.com/onezoomin/regen-ledger
-    init: cd /workspace/regen-local/regen-ledger && git pull && git checkout divvy && make -k install && scripts/start_testnode.sh | tee start_testnode.log 
-    command: cd /workspace/regen-local/regen-ledger && regen start
-  - name: allocation-uii
-    before: curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm && cd allocation-ui || git clone https://github.com/onezoomin/allocation-ui 
+  - name: regen-ledger
+    before: cd regen-ledger || git clone https://github.com/onezoomin/regen-ledger && cd regen-ledger
+    init: |
+      git pull && git checkout divvy
+      make -k install && scripts/start_testnode.sh | tee start_testnode.log 
+    command: regen start
+  - name: allocation-ui
+    before: |
+      curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm
+      cd allocation-ui || git clone https://github.com/onezoomin/allocation-ui 
     init: cd /workspace/regen-local/allocation-ui && git pull && pnpm i
     command: cd /workspace/regen-local/allocation-ui && pnpm dev --force
     openMode: split-right
