--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,7 +13,7 @@ tasks:
       cd regen-ledger || (git clone https://github.com/onezoomin/regen-ledger && cd regen-ledger)
       echo 'alias regd="regen --home /workspace/regen-local/.regen"' >> ~/.bashrc.d/aliases
     init: |
-      cd /workspace/regen-local/ && git pull && git checkout divvy
+      cd /workspace/regen-local/ && git pull --ff-only && git checkout divvy
       make -k install && scripts/start_testnode.sh | tee /workspace/start_testnode$(date '+%Y-%m-%d_+%T').log && 
       mv $HOME/.regen /workspace/regen-local/
     command: regen --home /workspace/regen-local/.regen start
@@ -21,7 +21,7 @@ tasks:
     before: |
       curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm
       cd allocation-ui || git clone https://github.com/onezoomin/allocation-ui 
-    init: cd /workspace/regen-local/allocation-ui && git pull && pnpm i
+    init: cd /workspace/regen-local/allocation-ui && git pull --ff-only && pnpm i
     command: cd /workspace/regen-local/allocation-ui && pnpm dev --force
     openMode: split-right
 
