--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,8 +13,8 @@ tasks:
       cd regen-ledger || (git clone https://github.com/onezoomin/regen-ledger && cd regen-ledger)
       echo 'alias regd="regen --home /workspace/regen-local/.regen"' >> ~/.bashrc.d/aliases
     init: |
-      cd /workspace/regen-local/ && git pull --ff-only && git checkout divvy
-      make -k install && scripts/start_testnode.sh | tee /workspace/start_testnode$(date '+%Y-%m-%d_+%T').log && 
+      cd /workspace/regen-local/regen-ledger && git pull --ff-only && git checkout divvy
+      make -k install && scripts/start_testnode.sh | tee /workspace/regen-local/start_testnode$(date '+%Y-%m-%d_+%T').log && 
       mv $HOME/.regen /workspace/regen-local/
     command: regen --home /workspace/regen-local/.regen start
   - name: allocation-ui
